welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:2: error: reassignment to val
	if(isSummer=false){
                   ^squirrelPlay:7: error: not found: value temps
	if(temps <=60 && temp>=100 && isSummer=true)
           ^